# pychesca

./: .gitattributes  README.md  chesca.py  chespa.py  chespa_cs.csv  cluster.py  dev.ipynb  environment.yaml  plots.py  pychesca_colab.ipynb  pyproject.toml  run_chesca.py  setup.py  svd.py  test_data.csv  utils.py  visualize.py
.ipynb_checkpoints/: dev-checkpoint.ipynb
_old/: chesca.py  cluster.py  plots.py  visualize.py
examples/: test_data.csv
pychesca/: chesca.py  svd.py
src/pychesca/: __init__.py  _cli.py  chespa.py  cluster.py  plots.py  svd.py  utils.py  visualize.py
src/pychesca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: rawData_NHshiftonly.xlsx
tests/: test_chespa.py  test_cluster.py  test_svd.py
tests/data/: test_cs.csv  test_data.csv
